# api/api.go
@@ -34,6 +34,16 @@ func New(opt *RoutetOptions) *gin.Engine {
 	apiV1.PUT("/users/update/:id", handlerV1.UpdateUser)
 	apiV1.DELETE("/users/delete/:id", handlerV1.DeleteUser)
 
+	apiV1.POST("/categories", handlerV1.CreateCategory)
+	apiV1.GET("/categories/:id", handlerV1.GetCategory)
+	apiV1.PUT("/categories/update/:id", handlerV1.UpdateCategory)
+	apiV1.DELETE("/categories/delete/:id", handlerV1.DeleteCategory)
+
+	apiV1.POST("/posts", handlerV1.CreatePost)
+	apiV1.GET("/posts/:id", handlerV1.GetPost)
+	apiV1.PUT("/posts/update/:id", handlerV1.UpdatePost)
+	apiV1.DELETE("/posts/delete/:id", handlerV1.DeletePost)
+
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return router
